--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.clearspring.analytics</groupId>
     <artifactId>stream</artifactId>
     <packaging>bundle</packaging>
-    <version>2.9.7-SNAPSHOT</version>
+    <version>2.9.6-osgi</version>
     <name>stream-lib</name>
     <description>A library for summarizing data in streams for which it is infeasible to store all events</description>
     <url>https://github.com/addthis/stream-lib</url>
